--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </nav>
-
+<!-- Buscaria imagenes con mejor resolución para que nos e pixeleen en la página final -->
         <div class="container-fluid p-0 m-xs-0 p-md-5">
             <div class="row p-xs-0 p-md-5">
                 <div class="col-xs-12 col-sm-6 col-md-4 ">
